--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 12:05:19 2018</p>
+         Last Run: Thu Jul 12 13:05:29 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -58,35 +58,35 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>32</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SSE</td>
-                        <td>22</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>37</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>25</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
                         <td>1</td>
-                        <td>42</td>
+                        <td>44</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SSE</td>
-                        <td>24</td>
+                        <td>SE</td>
+                        <td>31</td>
                      </tr>
                   </tbody>
                </table>
@@ -216,9 +216,9 @@
                "data":[
                  "33",
                  "33",
-                 "33",
-                 "36",
-                 "42"
+                 "32",
+                 "37",
+                 "44"
                ]
              },
              {
@@ -228,9 +228,9 @@
                "data":[
                  "16",
                  "20",
-                 "22",
-                 "25",
-                 "24"
+                 "23",
+                 "32",
+                 "31"
                ]
              }
            ]
@@ -242,12 +242,13 @@
                   var MyNewChart = new Chart(ctx).BarAlt(data,options);
                   document.getElementById("legend_chartHTMLReportGenerator2").innerHTML=MyNewChart.generateLegend();
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 12:05:19 2018</p>
+         Last Run: Thu Jul 12 13:05:29 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -271,20 +272,20 @@
                         <td>Partly Cloudy</td>
                         <td>12</td>
                         <td>12</td>
-                        <td>3</td>
-                        <td>70</td>
+                        <td>2</td>
+                        <td>69</td>
                         <td>3</td>
                         <td>16</td>
                         <td>NNW</td>
-                        <td>59</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Mostly Cloudy</td>
-                        <td>14</td>
-                        <td>14</td>
-                        <td>2</td>
-                        <td>58</td>
+                        <td>13</td>
+                        <td>13</td>
+                        <td>1</td>
+                        <td>59</td>
                         <td>4</td>
                         <td>14</td>
                         <td>NNW</td>
@@ -296,7 +297,7 @@
                         <td>15</td>
                         <td>15</td>
                         <td>0</td>
-                        <td>48</td>
+                        <td>49</td>
                         <td>5</td>
                         <td>11</td>
                         <td>NNW</td>
@@ -308,7 +309,7 @@
                         <td>17</td>
                         <td>17</td>
                         <td>15</td>
-                        <td>42</td>
+                        <td>43</td>
                         <td>6</td>
                         <td>10</td>
                         <td>NNW</td>
@@ -317,10 +318,10 @@
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>15</td>
-                        <td>37</td>
+                        <td>40</td>
                         <td>7</td>
                         <td>8</td>
                         <td>NNW</td>
@@ -371,10 +372,10 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "12",
-                 "14",
+                 "13",
                  "15",
                  "17",
-                 "19"
+                 "18"
                ]
              },
              {
@@ -384,10 +385,10 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "12",
-                 "14",
+                 "13",
                  "15",
                  "17",
-                 "19"
+                 "18"
                ]
              }
            ]
@@ -440,8 +441,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
                  "2",
+                 "1",
                  "0",
                  "15",
                  "15"
@@ -452,11 +453,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "70",
-                 "58",
-                 "48",
-                 "42",
-                 "37"
+                 "69",
+                 "59",
+                 "49",
+                 "43",
+                 "40"
                ]
              },
              {
@@ -464,7 +465,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "59",
+                 "58",
                  "64",
                  "63",
                  "52",
@@ -485,7 +486,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 12:05:19 2018</p>
+         Last Run: Thu Jul 12 13:05:29 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -526,7 +527,7 @@
                         <td>3</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>5</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -546,11 +547,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>38</td>
+                        <td>39</td>
                         <td>6</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>15</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -693,7 +694,7 @@
                  "55",
                  "47",
                  "43",
-                 "38",
+                 "39",
                  "35"
                ]
              },
@@ -703,9 +704,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "1",
-                 "5",
+                 "4",
                  "11",
-                 "15",
+                 "14",
                  "13"
                ]
              }
@@ -723,7 +724,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 12:05:19 2018</p>
+         Last Run: Thu Jul 12 13:05:29 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -748,7 +749,7 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>27</td>
+                        <td>26</td>
                         <td>2</td>
                         <td>16</td>
                         <td>SE</td>
@@ -757,14 +758,14 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>26</td>
-                        <td>26</td>
+                        <td>27</td>
+                        <td>27</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>28</td>
                         <td>1</td>
                         <td>16</td>
                         <td>SE</td>
-                        <td>17</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -772,11 +773,11 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>33</td>
                         <td>0</td>
                         <td>16</td>
                         <td>SE</td>
-                        <td>23</td>
+                        <td>10</td>
                      </tr>
                   </tbody>
                </table>
@@ -821,7 +822,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "27",
-                 "26",
+                 "27",
                  "25"
                ]
              },
@@ -832,7 +833,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "27",
-                 "26",
+                 "27",
                  "25"
                ]
              }
@@ -894,9 +895,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "27",
-                 "30",
-                 "35"
+                 "26",
+                 "28",
+                 "33"
                ]
              },
              {
@@ -905,8 +906,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "3",
-                 "17",
-                 "23"
+                 "7",
+                 "10"
                ]
              }
            ]
@@ -923,7 +924,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 12:05:19 2018</p>
+         Last Run: Thu Jul 12 13:05:29 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -944,39 +945,39 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>24</td>
-                        <td>37</td>
+                        <td>6</td>
+                        <td>36</td>
                         <td>1</td>
                         <td>16</td>
                         <td>E</td>
-                        <td>31</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>Clear</td>
                         <td>24</td>
-                        <td>41</td>
+                        <td>24</td>
+                        <td>6</td>
+                        <td>40</td>
                         <td>0</td>
                         <td>16</td>
                         <td>E</td>
-                        <td>43</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>41</td>
-                        <td>49</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>31</td>
+                        <td>48</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ENE</td>
-                        <td>51</td>
+                        <td>35</td>
                      </tr>
                   </tbody>
                </table>
@@ -1021,8 +1022,8 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "25",
-                 "23",
-                 "21"
+                 "24",
+                 "22"
                ]
              },
              {
@@ -1032,8 +1033,8 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "25",
-                 "23",
-                 "21"
+                 "24",
+                 "22"
                ]
              }
            ]
@@ -1084,9 +1085,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
-                 "24",
-                 "41"
+                 "6",
+                 "6",
+                 "31"
                ]
              },
              {
@@ -1094,9 +1095,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "37",
-                 "41",
-                 "49"
+                 "36",
+                 "40",
+                 "48"
                ]
              },
              {
@@ -1104,9 +1105,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "31",
-                 "43",
-                 "51"
+                 "18",
+                 "23",
+                 "35"
                ]
              }
            ]
