--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 14:05:20 2018</p>
+         Last Run: Thu Jul 12 15:05:23 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -34,21 +34,21 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>29</td>
                         <td>4</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SSE</td>
-                        <td>22</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>26</td>
+                        <td>26</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>30</td>
                         <td>2</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SSE</td>
                         <td>20</td>
                      </tr>
@@ -78,15 +78,15 @@
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>1</td>
-                        <td>44</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>43</td>
+                        <td>0</td>
+                        <td>10</td>
                         <td>SE</td>
-                        <td>31</td>
+                        <td>27</td>
                      </tr>
                   </tbody>
                </table>
@@ -133,7 +133,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "26",
-                 "25",
+                 "26",
                  "25",
                  "24",
                  "22"
@@ -146,7 +146,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "26",
-                 "25",
+                 "26",
                  "25",
                  "24",
                  "22"
@@ -206,7 +206,7 @@
                  "0",
                  "0",
                  "0",
-                 "1"
+                 "0"
                ]
              },
              {
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "29",
                  "30",
                  "34",
-                 "34",
                  "37",
-                 "44"
+                 "43"
                ]
              },
              {
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "22",
+                 "21",
                  "20",
                  "32",
                  "29",
-                 "31"
+                 "27"
                ]
              }
            ]
@@ -248,7 +248,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 14:05:20 2018</p>
+         Last Run: Thu Jul 12 15:05:23 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -270,38 +270,38 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Partly Cloudy</td>
-                        <td>12</td>
-                        <td>12</td>
+                        <td>13</td>
+                        <td>13</td>
                         <td>2</td>
-                        <td>69</td>
+                        <td>65</td>
                         <td>3</td>
                         <td>16</td>
                         <td>NNW</td>
-                        <td>58</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>13</td>
-                        <td>13</td>
+                        <td>Partly Cloudy</td>
+                        <td>14</td>
+                        <td>14</td>
                         <td>1</td>
-                        <td>59</td>
+                        <td>56</td>
                         <td>4</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>64</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>15</td>
-                        <td>15</td>
+                        <td>Partly Cloudy</td>
+                        <td>16</td>
+                        <td>16</td>
                         <td>0</td>
-                        <td>49</td>
-                        <td>5</td>
+                        <td>46</td>
+                        <td>6</td>
                         <td>11</td>
                         <td>NNW</td>
-                        <td>63</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -309,11 +309,11 @@
                         <td>17</td>
                         <td>17</td>
                         <td>15</td>
-                        <td>43</td>
-                        <td>6</td>
+                        <td>42</td>
+                        <td>7</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>52</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -325,7 +325,7 @@
                         <td>7</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>49</td>
+                        <td>45</td>
                      </tr>
                   </tbody>
                </table>
@@ -371,9 +371,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "12",
                  "13",
-                 "15",
+                 "14",
+                 "16",
                  "17",
                  "18"
                ]
@@ -384,9 +384,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "12",
                  "13",
-                 "15",
+                 "14",
+                 "16",
                  "17",
                  "18"
                ]
@@ -453,10 +453,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
-                 "59",
-                 "49",
-                 "43",
+                 "65",
+                 "56",
+                 "46",
+                 "42",
                  "39"
                ]
              },
@@ -465,11 +465,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "58",
-                 "64",
-                 "63",
                  "52",
-                 "49"
+                 "47",
+                 "43",
+                 "43",
+                 "45"
                ]
              }
            ]
@@ -486,7 +486,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 14:05:20 2018</p>
+         Last Run: Thu Jul 12 15:05:23 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -511,7 +511,7 @@
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>54</td>
+                        <td>55</td>
                         <td>2</td>
                         <td>8</td>
                         <td>S</td>
@@ -523,7 +523,7 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>47</td>
+                        <td>48</td>
                         <td>3</td>
                         <td>10</td>
                         <td>S</td>
@@ -691,8 +691,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
-                 "47",
+                 "55",
+                 "48",
                  "43",
                  "39",
                  "35"
@@ -724,7 +724,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 14:05:20 2018</p>
+         Last Run: Thu Jul 12 15:05:23 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -763,9 +763,9 @@
                         <td>0</td>
                         <td>28</td>
                         <td>1</td>
-                        <td>18</td>
+                        <td>16</td>
                         <td>SE</td>
-                        <td>9</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -776,8 +776,8 @@
                         <td>33</td>
                         <td>0</td>
                         <td>16</td>
-                        <td>SE</td>
-                        <td>13</td>
+                        <td>ESE</td>
+                        <td>10</td>
                      </tr>
                   </tbody>
                </table>
@@ -906,8 +906,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "4",
-                 "9",
-                 "13"
+                 "7",
+                 "10"
                ]
              }
            ]
@@ -924,7 +924,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 14:05:20 2018</p>
+         Last Run: Thu Jul 12 15:05:23 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -946,10 +946,10 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>26</td>
+                        <td>26</td>
                         <td>5</td>
-                        <td>36</td>
+                        <td>35</td>
                         <td>1</td>
                         <td>16</td>
                         <td>E</td>
@@ -961,7 +961,7 @@
                         <td>24</td>
                         <td>24</td>
                         <td>5</td>
-                        <td>40</td>
+                        <td>39</td>
                         <td>0</td>
                         <td>16</td>
                         <td>E</td>
@@ -973,7 +973,7 @@
                         <td>22</td>
                         <td>22</td>
                         <td>24</td>
-                        <td>47</td>
+                        <td>46</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ENE</td>
@@ -1021,7 +1021,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "25",
+                 "26",
                  "24",
                  "22"
                ]
@@ -1032,7 +1032,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "25",
+                 "26",
                  "24",
                  "22"
                ]
@@ -1095,9 +1095,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "36",
-                 "40",
-                 "47"
+                 "35",
+                 "39",
+                 "46"
                ]
              },
              {
